# chat

./: read
charserver/: CMakeLists.txt
charserver/include/server/model/: groupmodel.hpp  user.hpp
charserver/src/client/: main.cpp
charserver/src/server/: chatservice.cpp
charserver/src/server/db/: db.cpp
charserver/src/server/model/: groupmodel.cpp
